...
    <string name="error_no_resource">No resource found</string>
    <string name="error_invalid_request">Invalid request</string>
    <string name="error_space_over_capacity">Space is over capacity</string>
    <string name="error_resource_overflow">Resource overflow</string>
    <string name="error_too_large_file">File is too large</string>
    <string name="error_authentication">Not registered on this space.</string>
    <string name="error_default">An error happened. Please retry</string>

    <!-- Strings related to Settings -->
    <string name="pref_notification_key">notifications</string>
    <string name="pref_notification_summary_on">On</string>
    <string name="pref_notification_summary_off">Off</string>
    <string name="pref_notification_label">Notifications</string>
...
